--- a/css/style.css
+++ b/css/style.css
@@ -118,10 +118,12 @@ h6 {
 }
 
 .foolscreen__header {
-  position: relative;
-  z-index: 2;
+  position: fixed;
+  z-index: 20;
   background: #FFFFFF;
-  padding: 20px 0 20px;
+  padding: 10px 0;
+  left: 0;
+  right: 0;
 }
 
 .header__wrapper {
@@ -131,9 +133,9 @@ h6 {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  -webkit-box-align: self-end;
-      -ms-flex-align: self-end;
-          align-items: self-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .nav__list {
@@ -190,14 +192,14 @@ h6 {
 .foolscreen__content {
   position: relative;
   z-index: 2;
-  padding: 136px 0;
+  padding-top: 152px;
 }
 
 .main__title {
   font-family: "Alegreya SC";
   font-style: normal;
   font-weight: 400;
-  font-size: 92px;
+  font-size: 80px;
   line-height: 75px;
   letter-spacing: 0.08em;
   text-transform: uppercase;
@@ -216,7 +218,7 @@ h6 {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  padding-top: 78px;
+  padding-top: 42px;
 }
 
 .btn {
