--- a/scss/style.scss
+++ b/scss/style.scss
@@ -152,12 +152,13 @@ right: 0;
 	color: #003616;
 }
 .header__phone:hover {
-	background-size: 100% 1.6px;
+	background-size: 100% 1px;
 }
 .foolscreen__content{
 	position: relative;
 	z-index: 2;
 	padding-top: 152px;
+	padding-bottom: 152px;
 }
 .main__title {
 font-family: 'Alegreya SC';
@@ -202,7 +203,7 @@ color: #E9FFEF;
 	transition: all 0.8s ease-in-out;
 }
 .second__btn:hover{
-	scale: 1.2;
+	scale: 1.1;
 }
 
 .foolscreen__video{
@@ -212,4 +213,112 @@ left: 0;
 width: 100%;
 height: 100%;
 object-fit: cover;
+}
+
+.advice {
+	padding: 76px 0;
+	text-align: center;
+}
+.section__title {
+	font-family: 'Alegreya SC';
+font-style: normal;
+font-weight: 400;
+font-size: 40px;
+line-height: 54px;
+text-transform: uppercase;
+color: #003616;
+margin-bottom: 32px;
+text-align: center;
+}
+.advice__list {
+	display: flex;
+	justify-content: space-around;
+	margin-bottom: 40px;
+}
+.advice__link {
+	background: #FFFFFF;
+box-shadow: 4px 4px 1px rgba(217, 217, 217, 0.14);
+transition: all 0.8s ease-in-out;
+}
+.advice__link:hover{
+	scale: 1.1;
+}
+.advice__img {
+}
+.advice__info {
+	padding: 0 12px 24px 8px;
+}
+.advice__title {
+font-family: 'Alegreya SC';
+font-style: normal;
+font-weight: 500;
+font-size: 30px;
+line-height: 41px;
+color: #003616;
+margin-top: 8px;
+}
+.advice__subtitle {
+	font-family: 'Alegreya SC';
+font-style: normal;
+font-weight: 400;
+font-size: 18px;
+line-height: 24px;
+color: #003616;
+margin-top: 4px;
+}
+.advice__price{
+	font-family: 'Ubuntu';
+font-style: normal;
+font-weight: 400;
+font-size: 24px;
+line-height: 28px;
+text-align: right;
+letter-spacing: 0.08em;
+text-transform: uppercase;
+color: #003616;
+margin-top: 8px;
+}
+
+.info__item {
+	display: flex;
+	margin-top: 16px;
+}
+
+.advice__key {
+	font-family: 'Ubuntu';
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 18px;
+letter-spacing: 0.08em;
+color: #003616;
+width: 110px;
+margin-right: 38px;
+
+}
+.advice__value {
+	font-family: 'Ubuntu';
+font-style: normal;
+font-weight: 300;
+font-size: 16px;
+line-height: 18px;
+letter-spacing: 0.08em;
+color: #003616;
+}
+.info__link{
+	font-family: 'Ubuntu';
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 18px;
+letter-spacing: 0.08em;
+text-transform: uppercase;
+color: #003616;
+}
+.info-box__link{
+	margin-top: 16px;
+text-align: right;
+}
+.advice-box__link:hover{
+	background-size: 100% 1px;
 }
