--- a/css/style.css
+++ b/css/style.css
@@ -400,16 +400,17 @@ h6 {
 }
 
 .info__price {
-  background-image: url(/images/prise-bg.svg);
-  background-position: right bottom;
-  background-repeat: no-repeat;
-  padding: 40px 0;
+  padding: 56px 0px;
+  background: #E9FFEF;
 }
 
 .info__price-content {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  background-image: url(../images/prise-bg.svg);
+  background-position: right bottom;
+  background-repeat: no-repeat;
 }
 
 .info__price-item {
