--- a/scss/style.scss
+++ b/scss/style.scss
@@ -329,14 +329,15 @@ text-align: right;
 }
 
 .info__price {
-	background-image: url(/images/prise-bg.svg);
-	background-position: right bottom;
-	background-repeat: no-repeat;
-	padding: 40px 0;
+	padding: 56px 0px;
+	background: #E9FFEF;
 }
 
 .info__price-content {
 	display: flex;
+	background-image: url(../images/prise-bg.svg);
+	background-position: right bottom;
+	background-repeat: no-repeat;
 }
 .info__price-item {
 	position: relative;
