--- a/css/style.css
+++ b/css/style.css
@@ -124,6 +124,8 @@ h6 {
   padding: 10px 0;
   left: 0;
   right: 0;
+  -webkit-filter: drop-shadow(0px 4px 4px rgba(217, 217, 217, 0.14));
+          filter: drop-shadow(0px 4px 4px rgba(217, 217, 217, 0.14));
 }
 
 .header__wrapper {
