--- a/scss/style.scss
+++ b/scss/style.scss
@@ -107,6 +107,7 @@
 	padding: 10px 0;
 	left: 0;
 right: 0;
+filter: drop-shadow(0px 4px 4px rgba(217, 217, 217, 0.14))
 }
 .header__wrapper{
 	display: flex;
