--- a/css/style.css
+++ b/css/style.css
@@ -444,7 +444,7 @@ h6 {
 
 .marck-green::before {
   content: "";
-  background-image: url(/images/marck-green.svg);
+  background-image: url(../images/marck-green.svg);
   background-repeat: no-repeat;
   background-size: cover;
   position: absolute;
@@ -456,7 +456,7 @@ h6 {
 
 .marck-red::before {
   content: "";
-  background-image: url(/images/marck-red.svg);
+  background-image: url(../images/marck-red.svg);
   background-repeat: no-repeat;
   background-size: cover;
   position: absolute;
