--- a/scss/tour.scss
+++ b/scss/tour.scss
@@ -1,6 +1,7 @@
 .tour__main {
 	padding-top: 74px;
 	position: relative;
+	margin-bottom: 72px;
 }
 .title__section{
 	display: flex;
@@ -48,4 +49,61 @@ color: #003616;
 	object-fit: cover;
 	overflow: hidden;
 	max-height: 540px;
+}
+.info {
+	margin-bottom: 72px;
+}
+.info__video{
+max-height: 364px;
+}
+.info__wrap {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	grid-column-gap: 20px;
+}
+.list__wrap{
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+}
+.prise__wrap{
+	display: flex;
+	justify-content: space-between;
+	align-items: self-end;
+}
+.info__key {
+	font-family: 'Ubuntu';
+font-style: normal;
+font-weight: 400;
+font-size: 24px;
+line-height: 28px;
+letter-spacing: 0.08em;
+color: #003616;
+width: 110px;
+margin-right: 68px;
+
+}
+.info__value {
+	font-family: 'Ubuntu';
+font-style: normal;
+font-weight: 300;
+font-size: 24px;
+line-height: 28px;
+letter-spacing: 0.08em;
+color: #003616;
+text-align: left;
+}
+.price{
+	font-family: 'Ubuntu';
+font-style: normal;
+font-weight: 400;
+font-size: 32px;
+line-height: 37px;
+/* identical to box height */
+
+text-align: right;
+letter-spacing: 0.08em;
+text-transform: uppercase;
+
+color: #003616;
 }
